<resources>
    <string name="app_name">Omie Sales</string>
    <string name="title_home">Home</string>
    <string name="title_make_sale">Efetuar venda</string>
    <string name="title_sale_history">Histórico de vendas</string>
    <string name="menu">Menu</string>
    <string name="create_sale">Criar venda</string>
    <string name="historic">Vendas</string>
    <string name="client">Cliente</string>
    <string name="write_client_name">Escreva o nome do cliente</string>
    <string name="product">Produto</string>
    <string name="item_total_value">Valor total do item R$ 0,00</string>
    <string name="product_name">Nome do Produto</string>
    <string name="product_quantity">Quantidade</string>
    <string name="unit_value">Valor unitário</string>
    <string name="discount_value">Desconto do pedido</string>
    <string name="insert">Inserir</string>
    <string name="items_list">Lista de items</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="list_items">Lista de itens</string>
    <string name="qt_items">Qt de itens: 0</string>
    <string name="sale_total">Total do pedido R$ 0,00</string>
    <string name="empty_list">Sem itens na lista</string>
    <string name="total_sales">Total de vendas: R$ 0,00</string>
    <string name="order_number">Número do pedido</string>
    <string name="empty_sale">Nenhuma venda</string>
    <string name="order_items">Itens do pedido</string>
    <string name="total_order">Total do pedido :</string>
    <string name="total_item_value">Valor total do item: %s</string>
    <string name="items_qtd">Qt de itens: %d</string>
    <string name="total_value_sale">Valor total: %s</string>
</resources>